cluster/mediaserver/bazarr/arr-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bazarr-arr-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - sonarr
          - radarr
          - lidarr
          - prowlarr
          - seerr
    ports:
    - port: 6767
      protocol: TCP
